<resources>
    <string name="app_name">BunnyHop</string>
    <string name="Start">Start\n</string>
    <string name="your_points">Your Points:</string>
    <string name="_50">50</string>
    <string name="highest">Highest:</string>
    <string name="_100">100</string>
    <string name="exit">exit</string>
    <string name="restart">restart</string>
    <string name="score">Score</string>
</resources>