<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/score">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="408dp"
        android:layout_height="125dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="56dp"
            android:layout_height="50dp"
            android:background="@drawable/restart"
            android:onClick="restart"
            android:contentDescription="@string/restart" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:layout_width="51dp"
            android:layout_height="50dp"
            android:background="@drawable/exit"
            android:onClick="exit"
            android:contentDescription="@string/exit" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="354dp"
        android:layout_height="369dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/tvNewHighest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:contentDescription= "@string/score" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_points"
                    android:textColor="#0D30F1"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/_50"
                    android:textColor="@color/holo_orange"
                    android:textSize="50sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:text="@string/highest"
                    android:textColor="#062AF4"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/tvHighest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/_100"
                    android:textColor="@color/holo_yellow"
                    android:textSize="50sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="80dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>